--- a/20231107note.md
+++ b/20231107note.md
@@ -1,8 +1,8 @@
-## Link to nRF52840 sample code
+## 1.Link to nRF52840 sample code
 C:\ncs\v2.5.0\zephyr\samples
 
-## Register in Nordic Developer Academy 
+## 2.Register in Nordic Developer Academy 
 https://academy.nordicsemi.com/#panel
 
-## Youtube related to bluetooth
+## 3.Youtube related to bluetooth
 ![youtube1](image.png)
